--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -25,5 +25,11 @@
     "navigationBarTitleText": "专业英语背背佳",
     "navigationBarTextStyle": "black"
   },
+  "plugins":{
+    "WechatSI":{
+      "version":"0.3.3",
+      "provider":"wx069ba97219f66d99"
+    }
+  },
   "sitemapLocation": "sitemap.json"
 }
