--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/login/login",
     "pages/index/index",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
@@ -16,9 +17,15 @@
     "pages/index1/index1",
     "pages/search/search",
     "pages/community/community",
+
     "pages/mine/mine",
     "pages/selectMajor/selectMajor"
+
+   
+    
+
   ],
+  
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
