--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,5 @@
 {
   "pages": [
-    "pages/login/login",
     "pages/index/index",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
@@ -17,15 +16,13 @@
     "pages/index1/index1",
     "pages/search/search",
     "pages/community/community",
-
     "pages/mine/mine",
-    "pages/selectMajor/selectMajor"
-
-   
-    
-
+    "pages/login/login",
+    "pages/selectMajor/selectMajor",
+    "pages/cuoci/cuoci",
+    "pages/reciteWord/reciteWord",
+    "pages/mine/setting/setting"
   ],
-  
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
