--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -21,7 +21,10 @@
     "pages/selectMajor/selectMajor",
     "pages/cuoci/cuoci",
     "pages/reciteWord/reciteWord",
-    "pages/mine/setting/setting"
+    "pages/mine/setting/setting",
+    "pages/mine/about/about",
+    "pages/calendar/calendar",
+    "pages/index/against/against"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
