--- a/project.config.json
+++ b/project.config.json
@@ -47,7 +47,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -77,10 +77,23 @@
 					"scene": null
 				},
 				{
-					"id": 4,
-					"name": "pages/mine/mine",
-					"pathName": "pages/mine/mine",
+					"id": -1,
+					"name": "pages/calendar/calendar",
+					"pathName": "pages/calendar/calendar",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/selectMajor/selectMajor",
+					"pathName": "pages/selectMajor/selectMajor",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/mine/about/about",
+					"pathName": "pages/mine/about/about",
 					"scene": null
 				}
 			]
