--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -17,14 +17,14 @@
     "pages/search/search",
     "pages/community/community",
     "pages/mine/mine",
-    "pages/login/login",
     "pages/selectMajor/selectMajor",
     "pages/cuoci/cuoci",
     "pages/reciteWord/reciteWord",
     "pages/mine/setting/setting",
     "pages/mine/about/about",
     "pages/calendar/calendar",
-    "pages/index/against/against"
+    "pages/index/against/against",
+    "pages/mine/columnProcess/columnProcess"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
