--- a/project.config.json
+++ b/project.config.json
@@ -94,6 +94,21 @@
 					"id": -1,
 					"name": "pages/mine/about/about",
 					"pathName": "pages/mine/about/about",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 7,
+					"name": "pages/mine/columnProcess/columnProcess",
+					"pathName": "pages/mine/columnProcess/columnProcess",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/community/community",
+					"pathName": "pages/community/community",
+					"query": "",
 					"scene": null
 				}
 			]
